--- a/CloudService/CloudService/Views/MyClientTableViewCell.xib
+++ b/CloudService/CloudService/Views/MyClientTableViewCell.xib
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -14,26 +15,42 @@
                 <rect key="frame" x="0.0" y="0.0" width="375" height="78"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="张三" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ISD-1P-NY7">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="张三" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ISD-1P-NY7">
                         <rect key="frame" x="38" y="14" width="87" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="87" id="fte-Un-a24"/>
+                            <constraint firstAttribute="height" constant="21" id="rYr-Ue-51L"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="车牌号：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DYI-a0-nPB">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="车牌号：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DYI-a0-nPB">
                         <rect key="frame" x="38" y="43" width="57" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="0jI-fe-tsG"/>
+                            <constraint firstAttribute="width" constant="57" id="tr1-RT-BTF"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="京A13414" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xGU-Te-tcu">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="京A13414" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xGU-Te-tcu">
                         <rect key="frame" x="83" y="43" width="93" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="CHn-ks-KNJ"/>
+                            <constraint firstAttribute="width" constant="93" id="k4p-kV-dOZ"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="详情" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LSk-r6-AO8">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="详情" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LSk-r6-AO8">
                         <rect key="frame" x="292" y="25" width="63" height="28"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="63" id="Ohz-Vp-lxf"/>
+                            <constraint firstAttribute="height" constant="28" id="wvW-Ld-AXr"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="0.99215686274509807" green="0.69411764705882351" blue="0.39215686274509803" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -51,6 +68,16 @@
                         </userDefinedRuntimeAttributes>
                     </label>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="DYI-a0-nPB" firstAttribute="top" secondItem="ISD-1P-NY7" secondAttribute="bottom" constant="8" id="DD8-n3-UyN"/>
+                    <constraint firstItem="xGU-Te-tcu" firstAttribute="top" secondItem="ISD-1P-NY7" secondAttribute="bottom" constant="8" id="EXR-tj-vCi"/>
+                    <constraint firstItem="DYI-a0-nPB" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="30" id="Nq9-z1-ozq"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="LSk-r6-AO8" secondAttribute="trailing" constant="12" id="Pfs-Yr-Cnp"/>
+                    <constraint firstItem="LSk-r6-AO8" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="17" id="bQ1-Yu-PYJ"/>
+                    <constraint firstItem="ISD-1P-NY7" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="6" id="f6v-Ns-fUe"/>
+                    <constraint firstItem="ISD-1P-NY7" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="30" id="xrM-5E-kuj"/>
+                    <constraint firstItem="xGU-Te-tcu" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="75" id="zhF-4O-XJq"/>
+                </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="lbInfo" destination="LSk-r6-AO8" id="J87-43-eUl"/>
