--- a/CloudService/CloudService/Views/ResetPhonePopView.xib
+++ b/CloudService/CloudService/Views/ResetPhonePopView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1605" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15A2301" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
@@ -15,7 +15,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Uyk-dB-9kD">
-                    <rect key="frame" x="33" y="236.5" width="309" height="193"/>
+                    <rect key="frame" x="33" y="237" width="309" height="193"/>
                     <subviews>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="请输入手机号" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jkn-DH-eBT">
                             <rect key="frame" x="15" y="40" width="279" height="50"/>
@@ -25,8 +25,8 @@
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="修改个人信息需验证手机" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0HD-2P-bYd">
-                            <rect key="frame" x="15" y="98" width="167.5" height="21"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="修改个人信息需验证手机" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0HD-2P-bYd">
+                            <rect key="frame" x="15" y="98" width="168" height="21"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="21" id="9Gb-yo-Ogl"/>
                             </constraints>
@@ -35,7 +35,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="avp-Za-3JT">
-                            <rect key="frame" x="182" y="98" width="111.5" height="21"/>
+                            <rect key="frame" x="182" y="98" width="112" height="21"/>
                             <state key="normal" title="重新发送">
                                 <color key="titleColor" red="1" green="0.17007582060000001" blue="0.18900344620000001" alpha="1" colorSpace="calibratedRGB"/>
                             </state>
@@ -44,7 +44,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rf6-Oe-Cg1">
-                            <rect key="frame" x="15" y="131" width="134.5" height="50"/>
+                            <rect key="frame" x="15" y="131" width="135" height="50"/>
                             <color key="backgroundColor" red="0.70205316027926323" green="0.70205316027926323" blue="0.70205316027926323" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="50" id="BDo-hi-hxK"/>
@@ -58,7 +58,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KAU-SB-xPL">
-                            <rect key="frame" x="159.5" y="131" width="134.5" height="50"/>
+                            <rect key="frame" x="160" y="131" width="134" height="50"/>
                             <color key="backgroundColor" red="1" green="0.3103950834193302" blue="0.33053402683609356" alpha="1" colorSpace="calibratedRGB"/>
                             <state key="normal" title="确定"/>
                             <userDefinedRuntimeAttributes>
